# codynamic-book-machine

./: .env.example  .gitignore  BOOTSTRAP.md  COMPLETE_ARCHITECTURE_FIX.md  ENV_VAR_IMPLEMENTATION.md  FROM_HARDCODED_TO_POLYMORPHIC.md  PATH_DISCOVERY_MIGRATION.md  POLYMORPHIC_BOOTSTRAP.md  PROGRESS.md  PROJECT_SUMMARY.md  README.md  SCHEMA_SYSTEM_FIX.md  book_machine.txt  index.html  main.js  main.py  package-lock.json  package.json  preload.js  pyproject.toml  requirements.txt  verify_setup.py
data/: outline.yaml  outline_template.yaml
data/schemas/: CHANGELOG.md  (+9 more)
docs/: ARCHITECTURE_SUMMARY.md  MERMAID_DIAGRAMS.md  OPERADIC_LOGIC_CORRECTED.md  QUICK_REFERENCE.md  README.md  UI_LAYOUT_PLAN.fig  UI_LAYOUT_PLAN.md  WORK_MANAGEMENT.md  operadic_architecture.html  operadic_architecture_clean.html  operadic_clean_final.html
examples/: bootstrap_examples.py  simple_agent_demo.py
public/: app.js  index.html  styles.css
schemas/: CHANGELOG.md  ENVIRONMENT_CONFIG.md  README.md  SCHEMA_DOCUMENTATION.md  test_registry.json
scripts/: __init__.py  bootstrap.py  bootstrap_concrete.py  compile_latex.js  migrate_outline.py  runner.py  user_chat.py
tests/: __init__.py  test_agent_controller.py  test_agent_runtime.py  test_agent_workflow.py  test_app_state.py  test_authoring_loop.py  test_beyond_mvp.py  test_book_canonical.py  test_book_importer.py  test_book_intake.py  test_book_library.py  test_conversation_outline.py  test_prompt_runtime.py  test_providers.py  test_schema_system.py  test_smoke_foundation.py  test_typesetting.py  test_user_chat.py  test_work_management.py
(+336 files in other folders)
